// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category template should render correctly 1`] = `
<div
  className="sc-bdvvtL eQvckl"
>
  <nav
    className="sc-dkPtRN iWYBVL nav-toggle-close"
    data-navtoggle="nav-toggle"
    onClick={[Function]}
    open={false}
  >
    <div
      className="sc-hKwDye gouPLR nav-toggle-close"
      data-navtoggle="nav-toggle"
      open={false}
    >
      <button
        className="sc-eCImPb fhUfIC"
        data-cy="open-sidemenu"
        onClick={[Function]}
        open={false}
        tabIndex={0}
      >
        ←
      </button>
      <div
        aria-hidden={true}
        className="sc-jRQBWg gbGJiW nav-toggle-close"
        data-navtoggle="nav-toggle"
        open={false}
      >
        <div
          className="sc-gKclnd ffLas"
        >
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <a
                active={false}
                className="sc-hBUSln jYrSr"
                dark={true}
                href="/blog"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={false}
                tabIndex={-1}
              >
                Blog
              </a>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="7rem"
              open={false}
            >
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/bens-thoughts/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Ben's Thoughts
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/reviews/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Reviews
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/down-south-boulder-road/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Podcast
              </a>
            </div>
          </div>
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <a
                active={false}
                className="sc-hBUSln jYrSr"
                dark={true}
                href="/author"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={false}
                tabIndex={-1}
              >
                Author
              </a>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="4rem"
              open={false}
            >
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/author/books/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Books
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/author/short-stories/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Short Stories
              </a>
            </div>
          </div>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/portfolio"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Portfolio
          </a>
        </div>
        <div
          className="sc-gKclnd ffLas"
        >
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <h3
                className="sc-iUKqMP clVTxU"
                style={
                  Object {
                    "transition": "color 0.8s ease",
                  }
                }
              >
                Search
              </h3>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="25rem"
              open={false}
            >
              <div
                className="sc-ikJyIC gxGprN"
              >
                <input
                  autoFocus={false}
                  data-cy="search-text-input"
                  id="global-search"
                  name="global-search"
                  onChange={[Function]}
                  placeholder=" "
                  style={
                    Object {
                      "width": "65%",
                    }
                  }
                  tabIndex={-1}
                  type="text"
                  value=""
                />
                <label
                  htmlFor="global-search"
                >
                  Search
                </label>
              </div>
              <div
                style={
                  Object {
                    "marginLeft": "2px",
                    "marginTop": "1rem",
                  }
                }
              >
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-post"
                    checked={true}
                    id="global-search-show-post"
                    name="global-search-show-post"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-post"
                    onClick={[Function]}
                  >
                    Show Posts
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-project"
                    checked={true}
                    id="global-search-show-project"
                    name="global-search-show-project"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-project"
                    onClick={[Function]}
                  >
                    Show Projects
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-book"
                    checked={true}
                    id="global-search-show-book"
                    name="global-search-show-book"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-book"
                    onClick={[Function]}
                  >
                    Show Books
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-story"
                    checked={true}
                    id="global-search-show-story"
                    name="global-search-show-story"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-story"
                    onClick={[Function]}
                  >
                    Show Stories
                  </span>
                </div>
              </div>
              <div
                className="sc-hOGkXu cWPszP"
              >
                <div
                  className="sc-jObWnj lgPcxg"
                >
                  No results yet!
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-gKclnd ffLas"
        >
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/theme"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Theme
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/about"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            About
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/contact"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Contact
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/privacy"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Privacy
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Home
          </a>
        </div>
        <div>
          <div
            className="sc-iJKOTD dwRKYK"
          >
            <input
              checked={false}
              className="sc-giYglK hzIgtN"
              id="active-theme-toggle"
              name="active-theme-toggle"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="sc-ezbkAF gsLafF"
              data-cy="sidebar-theme-toggle"
              htmlFor="active-theme-toggle"
              label="Theme: Day"
            />
            <span
              className="sc-bYoBSM jXWvNt"
              onClick={[Function]}
            >
              Theme: Day
            </span>
          </div>
        </div>
        <div
          className="sc-furwcr gNocVO"
        >
          <span
            className="sc-pVTFL fpqpLf"
          >
            © 2021 by Benyakir Horowitz
          </span>
          <span
            className="sc-pVTFL fpqpLf"
          >
            All Rights Reserved
          </span>
        </div>
      </div>
      <a
        href="/"
      >
        <div
          alt="Benyakir Writes Logo"
          aria-label="Logo"
          className="sc-jrQzAO ickAQl"
          open={false}
          role="img"
        />
      </a>
    </div>
  </nav>
  <main
    className="sc-gsDKAQ jRUJQC"
  >
    <div>
      <div
        style={
          Object {
            "opacity": 1,
            "transform": "translateY(0)",
            "transition": "all 500ms ease-in-out",
          }
        }
      >
        <div
          className="sc-cZMNgc klNyzB"
        >
          <h1
            className="sc-jcFjpl btWiCd"
          >
            Category A
          </h1>
          <div
            className="sc-jQrDum kJOLHz"
          >
            <span
              className="sc-iwjdpV ldkGGr"
              size="2rem"
            />
          </div>
          <div
            className="sc-jUosCB gOmDfy"
          >
            <span
              className="sc-iwjdpV jvjgeH"
              size="4rem"
            />
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`category template should render correctly 2`] = `
<div
  className="sc-bdvvtL eQvckl"
>
  <nav
    className="sc-dkPtRN iWYBVL nav-toggle-close"
    data-navtoggle="nav-toggle"
    onClick={[Function]}
    open={false}
  >
    <div
      className="sc-hKwDye gouPLR nav-toggle-close"
      data-navtoggle="nav-toggle"
      open={false}
    >
      <button
        className="sc-eCImPb fhUfIC"
        data-cy="open-sidemenu"
        onClick={[Function]}
        open={false}
        tabIndex={0}
      >
        ←
      </button>
      <div
        aria-hidden={true}
        className="sc-jRQBWg gbGJiW nav-toggle-close"
        data-navtoggle="nav-toggle"
        open={false}
      >
        <div
          className="sc-gKclnd ffLas"
        >
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <a
                active={false}
                className="sc-hBUSln jYrSr"
                dark={true}
                href="/blog"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={false}
                tabIndex={-1}
              >
                Blog
              </a>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="7rem"
              open={false}
            >
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/bens-thoughts/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Ben's Thoughts
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/reviews/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Reviews
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/blog/down-south-boulder-road/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Podcast
              </a>
            </div>
          </div>
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <a
                active={false}
                className="sc-hBUSln jYrSr"
                dark={true}
                href="/author"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={false}
                tabIndex={-1}
              >
                Author
              </a>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="4rem"
              open={false}
            >
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/author/books/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Books
              </a>
              <a
                active={false}
                className="sc-hBUSln ZycME"
                dark={true}
                href="/author/short-stories/"
                inheritColor={false}
                inline={false}
                limitUnderbar={false}
                small={true}
                tabIndex={-1}
                underbarSize="70%"
              >
                Short Stories
              </a>
            </div>
          </div>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/portfolio"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Portfolio
          </a>
        </div>
        <div
          className="sc-gKclnd ffLas"
        >
          <div
            className="sc-fFeiMQ YRrEz"
          >
            <div
              className="sc-bkkeKt fiUmlP"
              onClick={[Function]}
              open={false}
            >
              <span
                className="sc-dJjYzT cWrHqT"
                data-cy="foldout-bar"
                onClick={[Function]}
                open={false}
                role="button"
                tabIndex={-1}
              >
                ↡
              </span>
              <h3
                className="sc-iUKqMP clVTxU"
                style={
                  Object {
                    "transition": "color 0.8s ease",
                  }
                }
              >
                Search
              </h3>
            </div>
            <div
              aria-hidden={true}
              className="sc-ieecCq hboLzq"
              data-navtoggle="no-toggle"
              height="25rem"
              open={false}
            >
              <div
                className="sc-ikJyIC gxGprN"
              >
                <input
                  autoFocus={false}
                  data-cy="search-text-input"
                  id="global-search"
                  name="global-search"
                  onChange={[Function]}
                  placeholder=" "
                  style={
                    Object {
                      "width": "65%",
                    }
                  }
                  tabIndex={-1}
                  type="text"
                  value=""
                />
                <label
                  htmlFor="global-search"
                >
                  Search
                </label>
              </div>
              <div
                style={
                  Object {
                    "marginLeft": "2px",
                    "marginTop": "1rem",
                  }
                }
              >
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-post"
                    checked={true}
                    id="global-search-show-post"
                    name="global-search-show-post"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-post"
                    onClick={[Function]}
                  >
                    Show Posts
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-project"
                    checked={true}
                    id="global-search-show-project"
                    name="global-search-show-project"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-project"
                    onClick={[Function]}
                  >
                    Show Projects
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-book"
                    checked={true}
                    id="global-search-show-book"
                    name="global-search-show-book"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-book"
                    onClick={[Function]}
                  >
                    Show Books
                  </span>
                </div>
                <div
                  className="sc-kHOZwM cgXxIp"
                >
                  <input
                    aria-labelledby="label-global-search-show-story"
                    checked={true}
                    id="global-search-show-story"
                    name="global-search-show-story"
                    onChange={[Function]}
                    type="checkbox"
                  />
                  <label
                    data-navtoggle="no-toggle"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      data-navtoggle="no-toggle"
                    >
                      ☞
                    </span>
                  </label>
                  <span
                    id="label-global-search-show-story"
                    onClick={[Function]}
                  >
                    Show Stories
                  </span>
                </div>
              </div>
              <div
                className="sc-hOGkXu cWPszP"
              >
                <div
                  className="sc-jObWnj lgPcxg"
                >
                  No results yet!
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-gKclnd ffLas"
        >
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/theme"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Theme
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/about"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            About
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/contact"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Contact
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/privacy"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Privacy
          </a>
          <a
            active={false}
            className="sc-hBUSln qSAav"
            dark={true}
            href="/"
            inheritColor={false}
            inline={false}
            limitUnderbar={false}
            small={false}
            tabIndex={-1}
            underbarSize="12rem"
          >
            Home
          </a>
        </div>
        <div>
          <div
            className="sc-iJKOTD dwRKYK"
          >
            <input
              checked={false}
              className="sc-giYglK hzIgtN"
              id="active-theme-toggle"
              name="active-theme-toggle"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="sc-ezbkAF gsLafF"
              data-cy="sidebar-theme-toggle"
              htmlFor="active-theme-toggle"
              label="Theme: Day"
            />
            <span
              className="sc-bYoBSM jXWvNt"
              onClick={[Function]}
            >
              Theme: Day
            </span>
          </div>
        </div>
        <div
          className="sc-furwcr gNocVO"
        >
          <span
            className="sc-pVTFL fpqpLf"
          >
            © 2021 by Benyakir Horowitz
          </span>
          <span
            className="sc-pVTFL fpqpLf"
          >
            All Rights Reserved
          </span>
        </div>
      </div>
      <a
        href="/"
      >
        <div
          alt="Benyakir Writes Logo"
          aria-label="Logo"
          className="sc-jrQzAO ickAQl"
          open={false}
          role="img"
        />
      </a>
    </div>
  </nav>
  <main
    className="sc-gsDKAQ jRUJQC"
  >
    <div>
      <div
        style={
          Object {
            "opacity": 1,
            "transform": "translateY(0)",
            "transition": "all 500ms ease-in-out",
          }
        }
      >
        <div
          className="sc-cZMNgc klNyzB"
        >
          <h1
            className="sc-jcFjpl btWiCd"
          >
            Category B
          </h1>
          <div
            className="sc-jQrDum kJOLHz"
          >
            <span
              className="sc-iwjdpV ldkGGr"
              size="2rem"
            />
          </div>
          <div
            className="sc-jUosCB gOmDfy"
          >
            <span
              className="sc-iwjdpV jvjgeH"
              size="4rem"
            />
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
